--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -127,9 +127,56 @@
 .loop_slider_wrap .loop_slider div img {
     width: 100%;
 }
+.partnerships_section {
+    width: 100%;
+    padding: 91px 30px 100px;
+}
+.partnerships_section .partnerships_all_wrap .partner_title .part_title {
+    color: #37C8AE;
+    font-family: var(--second-heading);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 30px;
+    text-transform: uppercase;
+}
+.partnerships_section .partnerships_all_wrap .partner_all_wrap {
+    width: 100%;
+    max-width: 933px;
+}
+.partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_top_text .partners_text {
+    color: #FFF;
+    font-family: var(--main-heading-font);
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 55px;
+    text-transform: capitalize;
+}
+.partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_bottom_logos {
+    width: 100%;
+    max-width: 848px;
+    flex-wrap: wrap;
+    column-gap: 181px;
+    row-gap: 65px;
+    justify-content: space-between;
+    margin-top: 60px;
+}
+.partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_bottom_logos .part_logo img {
+    display: block;
+    width: 100%;
+}
 
 
-
+@media only screen and (max-width:1280px) {
+    .partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_bottom_logos {
+       column-gap: 80px;
+    }
+    .partnerships_section .partnerships_all_wrap .partner_all_wrap {
+        width: 100%;
+        max-width: 660px;
+    }
+}
 @media only screen and (min-width:992px) and (max-width:1024px) {
     .main-heading {
         font-size: 44px;
@@ -156,6 +203,25 @@
     .text_wrap .detail_count_wrap .first_count_wrap:not(:last-child) {
         margin-right: 30px;
     }
+    .partnerships_section {
+        padding: 50px 30px 50px;
+    }
+    .partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_top_text .partners_text {
+        font-size: 35px;
+        line-height: 45px;
+    }
+    .partnerships_section .partnerships_all_wrap .partner_all_wrap {
+        max-width: 510px;
+    }
+    .partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_bottom_logos {
+        column-gap: 0px;
+        row-gap: 30px;
+        margin-top: 30px;
+    }
+    .partnerships_section .partnerships_all_wrap .partner_title .part_title {
+        font-size: 22px;
+        line-height: 28px;
+    }
 }
 @media only screen and (max-width:767px) {
     .main_heading_text {
@@ -169,7 +235,7 @@
         border-left: none;
     }
     .hompage_section_top {
-        margin-top: 70px;
+        padding-top: 70px;
     }
     .text_wrap .detail_count_wrap {
         width: 100%;
@@ -197,5 +263,55 @@
     }
     .detail_count_wrap .first_count_wrap .text {
         font-size: 16px;
+    }
+    .slideshow .slider .item img {
+        min-width: 335px;
+        min-height: 276px;
+        object-fit: cover;
+    }
+    .slider_section_wrapper {
+        padding: 0 20px;
+    }
+    .loop_slider_wrap {
+        margin-top: -69px;
+        padding: 119px 0 50px;
+    }
+    .loop_slider_wrap .loop_slider div {
+        margin-right: 71px;
+    }
+    .partnerships_section {
+        width: 100%;
+        padding: 0px 20px 40px;
+    }
+    .partnerships_section .partnerships_all_wrap {
+        flex-direction: column;
+    }
+    .partnerships_section .partnerships_all_wrap .partner_all_wrap {
+        margin-top: 10px;
+    }
+    .partner_bottom_logos_mobile.flex.mobile {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        row-gap: 20px;
+        margin-top: 30px;
+    }
+    .partner_bottom_logos_mobile .part_logo {
+        margin-right: 36px;
+    }
+    .partner_bottom_logos_mobile .part_logo.not_wargin {
+        margin-right: 0;
+    }
+    .partner_bottom_logos_mobile .part_logo img {
+        width: 100%;
+        display: block;
+    }
+    .partnerships_section .partnerships_all_wrap .partner_title .part_title {
+        font-size: 18px;
+        line-height: normal;
+    }
+    .partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_top_text .partners_text {
+        font-size: 28px;
+        line-height: 34px;
     }
 }
