--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -302,24 +302,74 @@
                         <img src="../../assets/image/shopify-plus.png" alt="">
                     </div>
                 </div>
-                <div class="partner_bottom_logos_mobile flex mobile">
-                    <div class="part_logo">
-                        <img src="../../assets/image/shopify-mobile.png" alt="">
+                <div class="partner_bottom_logos_mobile mobile">
+                    <div class="upper-logos flex">
+                        <div class="part_logo">
+                            <img src="../../assets/image/shopify-mobile.png" alt="">
+                        </div>
+                        <div class="part_logo">
+                            <img src="../../assets/image/mailchimp-mobile.png" alt="">
+                        </div>
+                        <div class="part_logo not_wargin">
+                            <img src="../../assets/image/shippsy-mobile.png" alt="">
+                        </div>
                     </div>
-                    <div class="part_logo">
-                        <img src="../../assets/image/mailchimp-mobile.png" alt="">
+                    <div class="lower-logos flex">
+                        <div class="part_logo">
+                            <img src="../../assets/image/recharge-mobile.png" alt="">
+                        </div>
+                        <div class="part_logo">
+                            <img src="../../assets/image/klaviyo-update-mobile.png" alt="">
+                        </div>
+                        <div class="part_logo not_wargin">
+                            <img src="../../assets/image/shopify-plus-mobile.png" alt="">
+                        </div>
                     </div>
-                    <div class="part_logo not_wargin">
-                        <img src="../../assets/image/shippsy-mobile.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="blogs-section">
+    <div class="container">
+        <div class="our_work_all_wrap">
+            <div class="service-head flex space-between">
+                <div class="service-titel">
+                    <h3>Latest News</h3>
+                    <h2>From Industry Insights to Personal Growth</h2>
+                </div>
+                <div class="service-text">
+                    <p>
+                        Our Shopify design service offers a comprehensive solution for businesses looking to create a visually appealing and user-friendly online store. Our team of experienced designers and developers work closely with clients to understand their brand and target audience, resulting in a customized storefront that reflects their unique style and values. 
+                    </p>
+                </div>
+            </div>
+            <div class="blog_cards_wrapper flex">
+                <div class="blog_card_wrap">
+                    <div class="blog-img">
+                        <img src="../../assets/image/blog-one.png" alt="blog">
                     </div>
-                    <div class="part_logo">
-                        <img src="../../assets/image/recharge-mobile.png" alt="">
+                    <div class="blog-title-text">
+                        <h3>January 20, 2021</h3>
+                        <p>We provide creative and innovative Digital services</p>
                     </div>
-                    <div class="part_logo">
-                        <img src="../../assets/image/klaviyo-update-mobile.png" alt="">
+                </div>
+                <div class="blog_card_wrap">
+                    <div class="blog-img">
+                        <img src="../../assets/image/blog-two.png" alt="blog">
                     </div>
-                    <div class="part_logo not_wargin">
-                        <img src="../../assets/image/shopify-plus-mobile.png" alt="">
+                    <div class="blog-title-text">
+                        <h3>January 20, 2021</h3>
+                        <p>We provide creative and innovative Digital services</p>
+                    </div>
+                </div>
+                <div class="blog_card_wrap">
+                    <div class="blog-img">
+                        <img src="../../assets/image/blog-three.png" alt="blog">
+                    </div>
+                    <div class="blog-title-text">
+                        <h3>January 20, 2021</h3>
+                        <p>We provide creative and innovative Digital services</p>
                     </div>
                 </div>
             </div>
