Header mega menu design

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,17 +19,46 @@
                     <li class="dropdown relative">
                         <a href="/">Service</a>
                         <div class="dropdown-wrap">
-                            <ul class="drop-menu">
-                                <li class="drop-list">
-                                    <a href="/">ux/ui design</a>
-                                </li>
-                                <li class="drop-list">
-                                    <a href="/">shopify development</a>
-                                </li>
-                                <li class="drop-list">
-                                    <a href="/">data migration</a>
-                                </li>
-                            </ul>
+                            <div class="megamenu-container flex">
+                                <div class="mega-side-left">
+                                    <div class="mega-img-wrap">
+                                        <img src="../../assets/image/mega-menu.png" alt="mega-menu">
+                                    </div>
+                                    <div class="mega-text-wrap">
+                                        <h4 class="megatext">Introduce your business to the future-ready sector of innovators and executors.</h4>
+                                    </div>
+                                    <a href="" class="mega-btn">Let's Connect</a>
+                                </div>
+                                <div class="mega-side-right">
+                                    <h2 class="mega-heading">services</h2>
+                                    <ul class="drop-menu">
+                                        <li class="drop-list">
+                                            <a href="/">UX/UI Design</a>
+                                        </li>
+                                        <li class="drop-list">
+                                            <a href="/">shopify Web Development</a>
+                                        </li>
+                                        <li class="drop-list">
+                                            <a href="/">Strategy & CRO Insights</a>
+                                        </li>
+                                        <li class="drop-list">
+                                            <a href="/">Replatforming</a>
+                                        </li>
+                                        <li class="drop-list">
+                                            <a href="/">Data Migration</a>
+                                        </li>
+                                        <li class="drop-list">
+                                            <a href="/">Performance Enhancement</a>
+                                        </li>
+                                        <li class="drop-list">
+                                            <a href="/">theme development</a>
+                                        </li>
+                                        <li class="drop-list">
+                                            <a href="/">Custom Shopify App Development</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </li>
                     <li>
@@ -57,14 +86,29 @@
                     </div>
                         <div class="tabcontent">
                             <ul class="">
-                                <li class="">
-                                    <a href="/">ux/ui design</a>
+                                <li class="drop-list">
+                                    <a href="/">UX/UI Design</a>
                                 </li>
-                                <li class="">
-                                    <a href="/">shopify development</a>
+                                <li class="drop-list">
+                                    <a href="/">shopify Web Development</a>
                                 </li>
-                                <li class="">
-                                    <a href="/">data migration</a>
+                                <li class="drop-list">
+                                    <a href="/">Strategy & CRO Insights</a>
+                                </li>
+                                <li class="drop-list">
+                                    <a href="/">Replatforming</a>
+                                </li>
+                                <li class="drop-list">
+                                    <a href="/">Data Migration</a>
+                                </li>
+                                <li class="drop-list">
+                                    <a href="/">Performance Enhancement</a>
+                                </li>
+                                <li class="drop-list">
+                                    <a href="/">theme development</a>
+                                </li>
+                                <li class="drop-list">
+                                    <a href="/">Custom Shopify App Development</a>
                                 </li>
                             </ul>
                         </div>
