--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -29,14 +29,20 @@
         <div class="slider_section_wrapper">
             <div class="slideshow">
                 <ngx-slick-carousel class="slider" #slickModal="slick-carousel" [config]="caseConfig">
+                    <div ngxSlickItem class="item">
+                        <img src="../../assets/image/home_banner-two.png" />
+                    </div>
+                    <div ngxSlickItem class="item">
+                      <img src="../../assets/image/home_banner-one.png" />
+                    </div>
                   <div ngxSlickItem class="item">
-                    <img src="../../assets/image/home_banner.png" />
+                    <img src="../../assets/image/home_banner-three.png" />
                   </div>
                   <div ngxSlickItem class="item">
-                    <img src="../../assets/image/home_banner_two.png" />
+                    <img src="../../assets/image/home_banner-four.png" />
                   </div>
                   <div ngxSlickItem class="item">
-                    <img src="../../assets/image/home_banner_three.png" />
+                    <img src="../../assets/image/home_banner-five.png" />
                   </div>
                 </ngx-slick-carousel>
               </div>
