--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -63,28 +63,78 @@
     display: none;
 }
 .menu-wrap .menu-ul .dropdown {
-    padding: 10px 0;
+    padding: 35px 0;
 }
 .dropdown-wrap {
     position: absolute;
-    width: 260px;
-    background: linear-gradient(92deg, rgba(12, 55, 48, 0.50) 0%, #000 118.56%);
-    top: 38px;
-    left: -20px;
-    padding: 20px 0;
+    width: 519px;
+    background: #010C16;
+    top: 88px;
+    left: -216px;
+    padding: 20px 38px 38px 46px;
     display: none;
-}
-.dropdown-wrap .drop-menu  {
-    padding: 0 20px;
+    border-radius: 0px 0px 10px 10px;
+    border-top: 1px solid #37C8AE;
+    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.25);
+    z-index: 1;
 }
 .dropdown-wrap .drop-menu .drop-list {
-    padding: 10px 0px;
+    padding: 5px 0px;
+    margin-right: 0;
 }
 .dropdown-wrap .drop-menu .drop-list a {
-    font-size: 14px;
+    color: #37C8AE;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18px;
+    text-transform: capitalize;
+}
+.dropdown-wrap .megamenu-container.flex {
+    align-items: flex-start;
+    justify-content: space-between;
 }
 .menu-wrap .menu-ul .dropdown:hover .dropdown-wrap {
     display: block;
+}
+.dropdown-wrap .megamenu-container .mega-side-left .mega-img-wrap img {
+    display: block;
+}
+.dropdown-wrap .megamenu-container .mega-side-left .mega-text-wrap {
+    width: 100%;
+    max-width: 195px;
+}
+.dropdown-wrap .megamenu-container .mega-side-left .mega-text-wrap .megatext {
+    color: #FFF;
+    font-family: var(--second-heading);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
+.dropdown-wrap .megamenu-container .mega-side-left .mega-btn {
+    border-radius: 4px;
+    border: 1px solid #37C8AE;
+    display: inline-flex;
+    padding: 15px 18px 14px 18.3px;
+    justify-content: center;
+    align-items: center;
+}
+.dropdown-wrap .megamenu-container .mega-side-right {
+    max-width: 206px;
+    width: 100%;
+}
+.dropdown-wrap .megamenu-container .mega-side-right .mega-heading {
+    color: #FFF;
+    font-family: var(--second-heading);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 22px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    margin-top: 7px;
 }
 @media only screen and (max-width:991px) {
     .menu-wrap {
